--- a/css/style.css
+++ b/css/style.css
@@ -29,16 +29,18 @@ p {
     margin-bottom: 20vh;
 }
 
-.row-height {
-    /* background-color: #9ccef0; */
+/* .row-height {
+    background-color: #9ccef0;
     position: relative;
     height: 100vh;
-}
+} */
 
-.row-height p1 {
+/* .row-height p {
+    position: relative;
+    height: 70%;
     transform: translate(-50%, -50%);
     position: absolute;
     top: 50%;
     left: 50%;
     font-size: 50%;
-}
+} */
