--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,83 @@
+main {
+    background-color: #eee;
+}
+
 .navbar {
     margin-bottom: 0;
     border-radius: 0;
   }
 
-.jumbotron {
-    width: 100vw;
+.landing {
+    /* margin-top: 5vh; */
+    width: auto;
     text-align: center;
     font-size: 5vw;
     font-family: 'Notable', sans-serif;
+    padding: 0%;
+    padding-top: 3vh;
+    padding-bottom: 2vh;
+    margin: 0%;
+    margin-bottom: 5vh;
+    background-color: #eee;
 }
 
-/* .jumbotron p1 {
-    transform: translate(-50%, -50%);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 50%;
-} */
+.jumbotron row {
+    padding: 0%;
+    margin: 0%;
+}
 
-  /* Add a gray background color and some padding to the footer */
 footer {
     background-color: #f2f2f2;
     padding: 25px;
 }
 
 p {
-    margin-top: 20vh;
-    margin-bottom: 20vh;
+    margin-top: 15vh;
+    margin-bottom: 15vh;
 }
 
-/* .row-height {
-    background-color: #9ccef0;
-    position: relative;
-    height: 100vh;
-} */
+/* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
+a {
+    vertical-align: middle;
+    margin: 0%;
+    /* margin-bottom: 3vh;    */
+    /* display: block; */
+    text-align: center;
+    /* padding: 5px; */
+    transition: all 0.3s ease;
+    color: white;
+  }
 
-/* .row-height p {
-    position: relative;
-    height: 70%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 50%;
-} */
+  .fa {
+    /* padding: 20px; */
+    font-size: 3px;
+    /* width: 50px; */
+    text-align: center;
+    text-decoration: none;
+  }
+
+  /* Style the social media icons with color, if you want */
+  .icon-bar a:hover {
+    background-color: #000;
+  }
+  
+  .fa-facebook {
+    /* background: #3B5998; */
+    color: white;
+    font-size: 1vh;
+  }
+  
+  .soundcloud {
+    /* background: #ff5500; */
+    color: white;
+  }
+  
+  .youtube {
+    /* background: #bb0000; */
+    color: white;
+  }
+
+  .instagram {
+    /* background: #125688; */
+    color: white;
+  }
